--- a/adr/templates/adr/naranjo.html
+++ b/adr/templates/adr/naranjo.html
@@ -1,30 +1,27 @@
-{% extends 'website/base.html' %}
+{% extends 'adr/base.html' %}
 {% load static %}
 {% block styles %}
 
 {% endblock styles %}
 
 {% block content %}
-
+<div class="jumbotron">
 <form>
-    <div class="form-group row">
-        <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
-            <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
-        </div>
+    <div class="form-row form-group">
+        <label for="inputState" class="col-md-10">Question 1 </label>
+        <select id="inputState" class="form-control col-md-2">
+            <option selected>No</option>
+            <option>Yes</option>
+        </select>
+    </div>
+
+    <div class="form-row form-group">
+        <label for="inputState" class="col-md-10">Question 1 </label>
+        <select id="inputState" class="form-control col-md-2">
+            <option selected>No</option>
+            <option>Yes</option>
+        </select>
     </div>
 </form>
-<div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-    <label class="form-check-label" for="inlineCheckbox1">1</label>
 </div>
-<div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-    <label class="form-check-label" for="inlineCheckbox2">2</label>
-</div>
-<div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
-    <label class="form-check-label" for="inlineCheckbox3">3 (disabled)</label>
-</div>
-
 {% endblock %}
