prescription_record page made

--- a/adr/templates/adr/home.html
+++ b/adr/templates/adr/home.html
@@ -158,8 +158,8 @@
     var naranjoCard = document.getElementById("naranjo_card");
     var naranjoFieldValue = document.getElementById("naranjoFieldValue");
     var checkbox = document.getElementById("isPrevMed");
-<!--    var prescriptionForm = document.getElementById("prescriptionForm");-->
-<!--    var prescriptionForm = document-->
+// <!--    var prescriptionForm = document.getElementById("prescriptionForm");-->
+// <!--    var prescriptionForm = document-->
 
 
     function showOrHideNaranjo(){
