--- a/adr/templates/adr/result.html
+++ b/adr/templates/adr/result.html
@@ -6,7 +6,7 @@
 {% if isADR %}
 <div class="alert alert-success" role="alert">
 
-    <h4 class="alert-heading">All Good!</h4>
+    <h4 class="alert-heading">Alert!</h4>
     <p>
         ADR Confidence: <b>8%</b><br>
         Exact Cases: <b>0</b><br>
