--- a/adr/templates/adr/home.html
+++ b/adr/templates/adr/home.html
@@ -1,214 +1,60 @@
 {% extends 'adr/base.html' %}
+{% load static %}
+{% block styles %}
+
+{% endblock styles %}
+
 {% block content %}
-<br><br>
-<div class="container">
-    <form method="post" id="prescriptionForm">
-        {%csrf_token%}
-        <div class="form-group">
-            <label for="exampleInputEmail1">Patient's Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" name="name"
-                   placeholder="Name">
+<section id="about">
+    <div class="row">
+        <div class="col">
+            <div class="container py-5">
+                <center>
+                    <h1>About Us</h1>
+                </center>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis
+                    repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel
+                    itaque amet.</p>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="patientAge">Age</label>
-            <input type="text" class="form-control" id="patientAge" placeholder="Age" name="age">
+    </div>
+</section>
+
+<section id="links">
+    <div class="row py-5" style="background-color: #123456;">
+        <div class="col col-md-6" style="text-align:center; vertical-align: middle;">
+            <center><button type="button" class="btn btn-primary">Add new prescription</button></center><br>
+            <center><button type="button" class="btn btn-primary">See all records</button></center>
         </div>
-        <div class="form-group">
-            <label for="patientGender">Gender</label>
-            <input type="text" class="form-control" id="patientGender" placeholder="Gender" name="gender">
-        </div>
-        <div class="form-group">
-            <label for="patientDisease">Disease</label>
-            <input type="text" class="form-control" id="patientDisease" placeholder="Disease" name="disease">
-        </div>
-        <div class="form-group">
-            <label for="PatientMedication">Medication</label>
-            <input type="text" class="form-control" id="PatientMedication" placeholder="Medication" name="medication">
-        </div>
-        <input type="text" class="form-control" id="naranjoFieldValue" value="-1" placeholder="Medication" name="naranjoFieldValue" hidden>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="isPrevMed" onclick="showOrHideNaranjo()">
-            <label class="form-check-label" for="isPrevMed">
-                Previous Medication Taken?
-            </label>
-        </div>
-        <br>
-
-<!--    <button type="submit" class="btn btn-primary" style="margin: 10px 0">Submit</button>-->
-    </form>
-
-    <div class="card" id="naranjo_card" style="display:none">
-        <div class="card-header">
-            Answer these questions for Naranjo score
-        </div>
-        <div class="card-body">
-            <form>
-                <div class="form-row form-group" id="question_group1">
-                    <label for="question1" class="col-md-10"> Are there previous conclusive reports on this
-                        reaction?</label>
-                    <select id="question1" class="form-control col-md-2">
-                        <option>No</option>
-                        <option>Yes</option>
-                        <option selected>Do not know or not done</option>
-                    </select>
+        <div class="col col-md-6">
+            <div class="card" id="question_form_card" style="width: 70%;">
+                <div class="card-header">
+                    Get details for
                 </div>
-
-                <div class="form-row form-group" id="question_group2">
-                    <label for="question2" class="col-md-10">Did the adverse events appear after the suspected drug was
-                        given?</label>
-                    <select id="question2" class="form-control col-md-2">
-                        <option>No</option>
-                        <option>Yes</option>
-                        <option selected>Do not know or not done</option>
-                    </select>
+                <div class="card-body">
+                    <form method="GET" id="recordForm">
+                        <div class="form-group">
+                            <label for="recordId">Record id</label>
+                            <input type="number" class="form-control" id="recordId" placeholder="Record id" name="id">
+                        </div>
+                        
+                    </form><br>
+                    <button id="findRecordButton" onclick="findRecord()"> Find record</button>
                 </div>
-
-                <div class="form-row form-group" id="group_group3">
-                    <label for="question3" class="col-md-10">Did the adverse reaction improve when the drug was
-                        discontinued
-                        or a specific antagonist was given?</label>
-                    <select id="question3" class="form-control col-md-2">
-                        <option>No</option>
-                        <option>Yes</option>
-                        <option selected>Do not know or not done</option>
-                    </select>
-                </div>
-
-                <div class="form-row form-group" id="group_group4">
-                    <label for="question4" class="col-md-10"> Did the adverse reaction appear when the drug was
-                        readministered?</label>
-                    <select id="question4" class="form-control col-md-2">
-                        <option>No</option>
-                        <option>Yes</option>
-                        <option selected>Do not know or not done</option>
-
-                    </select>
-                </div>
-
-                <div class="form-row form-group" id="group_group5">
-                    <label for="question5" class="col-md-10">Are there alternative causes that could have caused the
-                        reaction?</label>
-                    <select id="question5" class="form-control col-md-2">
-                        <option>No</option>
-                        <option>Yes</option>
-                        <option selected>Do not know or not done</option>
-                    </select>
-                </div>
-
-                <div class="form-row form-group" id="group_group6">
-                    <label for="question6" class="col-md-10">Did the reaction reappear when a placebo was given?</label>
-                    <select id="question6" class="form-control col-md-2">
-                        <option>No</option>
-                        <option>Yes</option>
-                        <option selected>Do not know or not done</option>
-                    </select>
-                </div>
-
-                <div class="form-row form-group" id="group_group7">
-                    <label for="question7" class="col-md-10">Was the drug detected in any body fluid in toxic
-                        concentrations?</label>
-                    <select id="question7" class="form-control col-md-2">
-                        <option>No</option>
-                        <option>Yes</option>
-                        <option selected>Do not know or not done</option>
-                    </select>
-                </div>
-
-                <div class="form-row form-group" id="group_group8">
-                    <label for="question8" class="col-md-10">Was the reaction more severe when the dose was increased,
-                        or
-                        less severe when the dose was decreased?</label>
-                    <select id="question8" class="form-control col-md-2">
-                        <option>No</option>
-                        <option>Yes</option>
-                        <option selected>Do not know or not done</option>
-                    </select>
-                </div>
-
-                <div class="form-row form-group" id="group_group9">
-                    <label for="question9" class="col-md-10">Did the patient have a similar reaction to the same or
-                        similar
-                        drugs in any previous exposure?</label>
-                    <select id="question9" class="form-control col-md-2">
-                        <option>No</option>
-                        <option>Yes</option>
-                        <option selected>Do not know or not done</option>
-                    </select>
-                </div>
-                <div class="form-row form-group" id="group_group10">
-                    <label for="question10" class="col-md-10">Was the adverse event confirmed by any objective
-                        evidence?</label>
-                    <select id="question10" class="form-control col-md-2">
-                        <option>No</option>
-                        <option>Yes</option>
-                        <option selected>Do not know or not done</option>
-                    </select>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary" style="margin: 10px 0" onclick="sendData()">Submit</button>
 
-</div>
-
-
+</section>
 <script>
-    var questionFormCard = document.getElementById("question_form_card");
-    var naranjoCard = document.getElementById("naranjo_card");
-    var naranjoFieldValue = document.getElementById("naranjoFieldValue");
-    var checkbox = document.getElementById("isPrevMed");
-// <!--    var prescriptionForm = document.getElementById("prescriptionForm");-->
-// <!--    var prescriptionForm = document-->
-
-
-    function showOrHideNaranjo(){
-        console.log("it works");
-
-        if (checkbox.checked == true){
-            naranjoCard.style.display = "block";
-        } else {
-            naranjoCard.style.display = "none";
-        }
-
+    var recordForm = document.getElementById("recordForm");
+    var inputRecordId = document.getElementById("recordId");
+    function findRecord(){   
+        var recordid=     inputRecordId.value;
+        recordForm.action = "/prescriptionRecords/"+recordid;
+       recordForm.submit();
     }
-
-    function sendData(){
-
-        if (checkbox.checked == true) {
-            var comboBoxes = document.querySelector(".card-body form").querySelectorAll(".form-row select");
-            var score =0;
-            for(var i=0; i<comboBoxes.length; i++){
-                let curBox = comboBoxes[i];
-                switch(curBox.value){
-                    case "Yes": score++;
-                    if(i==1 || i==3){
-                        score++;
-                    }
-                    else if(i==5 || i==4){
-                        score--;
-                    }
-                    break;
-                    case "No": if(i==1 || i==3){
-                        score--;
-                    }
-                    else if(i==4){
-                        score+=2;
-                    }
-                    else if(i==5){
-                        score+=1;
-                    }
-                }
-            }
-            naranjoFieldValue.value = score;
-            console.log(score);
-        }
-        prescriptionForm.submit();
-
-    }
-
-
-
-
 </script>
 {% endblock %}
