--- a/adr/templates/adr/prescription_record.html
+++ b/adr/templates/adr/prescription_record.html
@@ -4,16 +4,16 @@
 {% block styles %}
 <style>
     #form_record_detail {
-        width: 70vw;
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, 0%);
+        width: 70%;
+        margin: auto;
+        /* position: absolute; */
+        /* left: 50%;
+        transform: translate(-50%, 0%); */
     }
 </style>
 {% endblock styles %}
 
 {% block content %}
-{{ id }}
 {% if records %}
 <table class="table table-hover">
     <thead class="thead-dark">
