--- a/adr/templates/adr/home.html
+++ b/adr/templates/adr/home.html
@@ -12,10 +12,10 @@
                 <center>
                     <h1>About Us</h1>
                 </center>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis
-                    repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel
-                    itaque amet.</p>
+                <!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>A web application that can be used by doctor's all over the world to get information regarding potential ADRs associated with the drugs they're prescribing.​</p>
+
+                        <p>It takes into account all the factors that makes ADRs erratic such as age, sex or geographic factors, etc.​</p>
             </div>
         </div>
     </div>
@@ -24,8 +24,10 @@
 <section id="links">
     <div class="row py-5" style="background-color: #123456;">
         <div class="col col-md-6" style="text-align:center; vertical-align: middle;">
-            <center><button type="button" class="btn btn-primary">Add new prescription</button></center><br>
-            <center><button type="button" class="btn btn-primary">See all records</button></center>
+            <div class="container" style="text-align:center; vertical-align: middle;">
+                <center><button type="button" class="btn btn-primary">Add new prescription</button></center><br>
+                <center><button type="button" class="btn btn-primary">See all records</button></center>
+            </div>
         </div>
         <div class="col col-md-6">
             <div class="card" id="question_form_card" style="width: 70%;">
