--- a/adr/templates/adr/base.html
+++ b/adr/templates/adr/base.html
@@ -34,13 +34,13 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item {% if active == 'home' %}active{% endif %}">
+          <a class="nav-link" href="{%url 'home'%}">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item {% if active == 'addPrescription' %}active{% endif %}">
           <a class="nav-link" href="{%url 'addPrescription'%}">Add prescription</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item {% if active == 'prescriptionRecords' %}active{% endif %}">
           <a class="nav-link" href="{%url 'prescriptionRecords'%}">Records</a>
         </li>
       </ul>
@@ -57,9 +57,8 @@
         <div class="row row-md-12">
           <div class="col-lg-6 footer-info" style="color: #fff">
             <h3 style="padding-top: 30px; font-family: 'Pacifico', cursive ;">MyMedGuide</h3>
-            <p>
-
-              All working under the President of SAC, who is a faculty mentor.</p>
+            <p>A web application that can be used by doctor's all over the world to get information regarding potential ADRs associated with the drugs they're prescribing.​</p>
+            
           </div>
 
           <div class="col-lg-6 footer-contact" style="padding-top: 30px;">
