buttons are working now on home

--- a/adr/templates/adr/home.html
+++ b/adr/templates/adr/home.html
@@ -25,8 +25,8 @@
     <div class="row py-5" style="background-color: #123456;">
         <div class="col col-md-6" style="text-align:center; vertical-align: middle;">
             <div class="container" style="text-align:center; vertical-align: middle;">
-                <center><button type="button" class="btn btn-primary">Add new prescription</button></center><br>
-                <center><button type="button" class="btn btn-primary">See all records</button></center>
+                <center><a class="btn btn-primary" href="{%url 'addPrescription'%}">Add new prescription</a></center><br>
+                <center><a class="btn btn-primary" href="{%url 'prescriptionRecords'%}">See all records</a></center>
             </div>
         </div>
         <div class="col col-md-6">
