Update: General phone number and mail id in footer

--- a/adr/templates/adr/base.html
+++ b/adr/templates/adr/base.html
@@ -67,8 +67,8 @@
               Ramanunan House, IIIT Naya Raipur<br>
               Sector-24, Near Muktangan<br>
               Chhattisgarh<br>
-              <strong>Phone:</strong> +91 9399151865<br>
-              <strong>Email:</strong> anurag17100@iiitnr.edu.in<br>
+              <strong>Phone:</strong> +91 9xxxxxxxxx<br>
+              <strong>Email:</strong> example@example.com<br>
 
             </p>
             <div class="social-links" style="color: #fff;" style="padding: 15px;">
